2014-05-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-attributes): Decode basic-type
	attributes.

2014-05-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-get-xs-attributes-from-groups): renamed
	from soap-xs-attribute-group-consolidate, all callers updated
	(soap-get-xs-attributes): renamed from
	soap-xs-attributes-consolidate, all callers updated

2014-05-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-type): Add attribute-group slot.
	(soap-xs-attribute-group): New type.
	(soap-xs-parse-attribute-group): New function.
	(soap-resolve-references-for-xs-attribute-group): Likewise.
	(soap-xs-add-extension): Handle attribute groups.
	(soap-resolve-references-for-xs-simple-type): Likewise.
	(soap-xs-parse-complex-type): Likewise.
	(soap-xs-parse-extension-or-restriction): Likewise.
	(soap-resolve-references-for-xs-complex-type): Likewise.
	(soap-xs-attribute-group-consolidate): New function.
	(soap-xs-attributes-consolidate): Handle attribute groups.
	(soap-parse-schema): Likewise.

2014-05-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-basic-type): Fix boolean
	encoding.

2014-05-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type): Print ref element
	names in warnings.

2014-04-27  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Fix splicing.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Eliminate invalid
	warnings for choice types.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type-attributes): Also
	encode base type attributes.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type): Fix compilation
	warning.  Print e-name in warnings, or element if e-name is nil.
